--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,25 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
+bankai-sdk = { git = "https://github.com/bankaixyz/bankai-sdk", package = "bankai-sdk", rev = "8b92b50" }
+bankai-types = { git = "https://github.com/bankaixyz/bankai-sdk", package = "bankai-types", rev = "8b92b50", default-features = false, features = ["verifier-types"] }
+bankai-verify = { git = "https://github.com/bankaixyz/bankai-sdk", package = "bankai-verify", rev = "8b92b50", default-features = false }
+sp1-sdk = "5.2.2"
+sp1-zkvm = "5.2.2"
+
+
 alloy-sol-types = "1.0"
+alloy-primitives = { version = "1.3.1", default-features = false, features = ["serde"] }
+tokio = { version = "1.39.0", default-features = false }
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+serde = { version = "1.0.200", default-features = false, features = ["derive"] }
+clap = { version = "4.0", features = ["derive", "env"] }
+tracing = "0.1.40"
+hex = "0.4.3"
+dotenv = "0.15.0"
+
+# Please do not remove the code bel
+ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e927cc146d7bc91e944cf6d9c55b05d45e", default-features = false, features = ["portable"] }
+
+[patch.crates-io]
+ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e927cc146d7bc91e944cf6d9c55b05d45e" }
