--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "fibonacci-lib"
+name = "settlement-lib"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 alloy-sol-types = { workspace = true }
+alloy-primitives = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = "1.0"
