--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 [dependencies]
 alloy-sol-types = { workspace = true }
+alloy-consensus = { workspace = true }
 sp1-zkvm.workspace = true
 settlement-lib = { path = "../lib" }
+bankai-types = { workspace = true }
+bankai-verify = { workspace = true }
+serde_json = { workspace = true }
