feat: add cli tool to play around with settlement

--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -20,6 +20,14 @@ path = "src/bin/vkey.rs"
 name = "merkle"
 path = "src/bin/merkle.rs"
 
+[[bin]]
+name = "settle"
+path = "src/bin/settle.rs"
+
+[[bin]]
+name = "cli"
+path = "src/bin/cli.rs"
+
 [dependencies]
 sp1-sdk.workspace = true
 tokio.workspace = true
@@ -33,5 +41,10 @@ alloy-sol-types = { workspace = true }
 settlement-lib = { path = "../lib" }
 bankai-sdk.workspace = true
 alloy-primitives.workspace = true
+alloy-provider.workspace = true
+alloy-rpc-types.workspace = true
+alloy-signer.workspace = true
+alloy-signer-local.workspace = true
+alloy-network.workspace = true
 [build-dependencies]
 sp1-build = "5.2.2"
