--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ sp1-zkvm = "5.2.2"
 alloy-sol-types = "1.0"
 alloy-primitives = { version = "1.3.1", default-features = false, features = ["serde"] }
 alloy-consensus = { version = "1.0", default-features = false }
+alloy-provider = "1.0"
+alloy-rpc-types = "1.0"
+alloy-signer = "1.0"
+alloy-signer-local = "1.0"
+alloy-network = "1.0"
 tokio = { version = "1.39.0", default-features = false }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0.200", default-features = false, features = ["derive"] }
