--- a/contracts/solana/Anchor.toml
+++ b/contracts/solana/Anchor.toml
@@ -1,16 +1,19 @@
+[toolchain]
+package_manager = "yarn"
+
+[features]
+resolution = true
+skip-lint = false
+
 [programs.localnet]
-settlement_solana_program = "11111111111111111111111111111111"
+bankai_solana = "9GrAFZAUtkj69pJRh1dzHnKxF8aZaEVFcYAN5RjMmb2f"
 
 [registry]
-url = "https://anchor.projectserum.com"
+url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "anchor test"
-
-[workspace]
-members = ["program"]
-
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/**/*.ts\""
