--- a/contracts/starknet/Scarb.toml
+++ b/contracts/starknet/Scarb.toml
@@ -7,10 +7,11 @@ edition = "2024_07"
 starknet = "2.9.0"
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.44.0" }
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.35.1" }
 
 [scripts]
 test = "snforge test"
+deploy = "bash deploy.sh"
 
 [[target.starknet-contract]]
 sierra = true
